# Robot

./: .gitignore  test_mqtts.py
clam-devices/: ARCHITECTURE.md  CMakeLists.txt  partitions.csv  run.sh  sdkconfig
clam-devices/factory/: register_device.py
clam-devices/main/: CMakeLists.txt  idf_component.yml  main.c
clam-devices/server/: docker-compose.yml
clam-devices/server/backend/: Dockerfile  requirements.txt
clam-devices/server/backend/app/: db.py  main.py  mqtts.py  schemas.py  security.py
clam-devices/server/backend/app/static/: index.html
es/: CMakeLists.txt  control_dashboard.html  readme.md  sdkconfig
es/main/: CMakeLists.txt  main.c
hello_word/: sdkconfig
test/: control_dashboard.html
test/__MACOSX/: ._readme.md
test/main/: main.c  test.c
